name:		    lexical-monoids
version:	    0.1.1
license:	    BSD3
license-file:   LICENSE
author:		    Edward A. Kmett
maintainer:	    Edward A. Kmett <ekmett@gmail.com>
stability:	    experimental
homepage:	    http://comonad.com/reader
category:	    Data
synopsis:	    Lexical monoids
description:    Facilities for lexing using monoids
copyright:      (c) 2009 Edward A. Kmett
build-type:     Simple
cabal-version:  >=1.2

library
  build-depends: base >= 4, text, fingertree, bytestring, category-extras, parallel
  exposed-modules:
    Data.Monoid.Lexical
    Data.Monoid.Lexical.SourcePosition
    Data.Monoid.Lexical.UTF8.Decoder
    Data.Monoid.Lexical.Words
  ghc-options: -Wall
